--- a/index.html
+++ b/index.html
@@ -65,23 +65,27 @@
 					</table>
 
 	                <div class="row examples">
-	                    <button type="button" class="btn btn-default" id="ex1" value='Shutter Island'>Shutter Island</button>
-	                    <button type="button" class="btn btn-default" id="ex3" value='Frances Ha'>Frances Ha</button>
-	                    <button type="button" class="btn btn-default" id="ex4" value='Hugo'>Hugo</button>
-	                    <button type="button" class="btn btn-default" id="ex2" value='Gattaca'>Gattaca</button>
-	                    <button type="button" class="btn btn-default" id="ex5" value="The King's Speech">The Kings Speech</button>
-	                    <button type="button" class="btn btn-default" id="ex6" value='spring breakers'>Spring Breakers</button>
-	                    <button type="button" class="btn btn-default" id="ex7" value='Ed Wood'>Ed Wood</button>
-	                    <button type="button" class="btn btn-default" id="ex8" value='Transformers: Revenge of the fallen'>Transformers: RotF</button>
-	                    <button type="button" class="btn btn-default" id="ex9" value='The Lord of the Rings: The Return of the King'>LOTR: Return of the King</button>
-	                    <button type="button" class="btn btn-default" id="ex10" value='Tremors'>Tremors</button>
-	                    <button type="button" class="btn btn-default" id="ex15" value='Erin Brockovich'>Erin Brockovich</button>
-	                    <button type="button" class="btn btn-default" id="ex11" value='Wolf of Wall Street'>Wolf of Wall Street</button>
-	                    <button type="button" class="btn btn-default" id="ex12" value='The Matrix Revolutions'>The Matrix Revolutions</button>
-	                    <button type="button" class="btn btn-default" id="ex13" value='lost in translation'>Lost in Translation</button>
-	                    <button type="button" class="btn btn-default" id="ex14" value='talented mr ripley'>Talented Mr Ripley</button>
-	                    <button type="button" class="btn btn-default" id="ex16" value="My Sister's Keeper">My Sister's Keeper</button>
-	                    <button type="button" class="btn btn-default" id="ex17" value="Tron Legacy">Tron</button>
+	                    <button type="button" class="btn btn-default" id="ex1" value='Black Swan'>Black Swan</button>
+	                    <button type="button" class="btn btn-default" id="ex2" value='Chinatown'>Chinatown</button>
+	                    <button type="button" class="btn btn-default" id="ex3" value='Limitless'>Limitless</button>
+	                    <button type="button" class="btn btn-default" id="ex4" value='The Jacket'>The Jacket</button>
+	                    <button type="button" class="btn btn-default" id="ex5" value='Red Cliff'>Red Cliff</button>
+	                    <button type="button" class="btn btn-default" id="ex6" value='Jurassic World'>Jurassic World</button>
+	                    <button type="button" class="btn btn-default" id="ex7" value='World War Z'>World War Z</button>
+	                    <button type="button" class="btn btn-default" id="ex8" value='Get Hard'>Get Hard</button>
+	                    <button type="button" class="btn btn-default" id="ex9" value='Selma'>Selma</button>
+	                    <button type="button" class="btn btn-default" id="ex10" value='Mr. Holmes'>Mr. Holmes</button>
+	                    <button type="button" class="btn btn-default" id="ex11" value='Slow West'>Slow West</button>
+	                    <button type="button" class="btn btn-default" id="ex12" value='Pride'>Pride</button>
+	                    <button type="button" class="btn btn-default" id="ex13" value='It Follows'>It Follows</button>
+	                    <button type="button" class="btn btn-default" id="ex14" value='Love is Strange'>Love is Strange</button>
+	                    <button type="button" class="btn btn-default" id="ex15" value='The Pianist'>The Pianist</button>
+	                    <button type="button" class="btn btn-default" id="ex16" value='Love Actually'>Love Actually</button>
+	                    <button type="button" class="btn btn-default" id="ex17" value='The Fifth Element'>The Fifth Element</button>
+	                    <button type="button" class="btn btn-default" id="ex18" value='Taxi Driver'>Taxi Driver</button>
+	                    <button type="button" class="btn btn-default" id="ex19" value='The Blair Witch Project'>The Blair Witch Project</button>
+	                    <button type="button" class="btn btn-default" id="ex20" value='Taken 2'>Taken 2</button>
+	                    <button type="button" class="btn btn-default" id="ex21" value='Taken'>Taken</button>
 	                </div><!-- /.row -->
 
 	                <div class="row search-box">
