--- a/index.html
+++ b/index.html
@@ -65,27 +65,25 @@
 					</table>
 
 	                <div class="row examples">
-	                    <button type="button" class="btn btn-default" id="ex1" value='Black Swan'>Black Swan</button>
-	                    <button type="button" class="btn btn-default" id="ex2" value='Chinatown'>Chinatown</button>
-	                    <button type="button" class="btn btn-default" id="ex3" value='Limitless'>Limitless</button>
-	                    <button type="button" class="btn btn-default" id="ex4" value='The Jacket'>The Jacket</button>
-	                    <button type="button" class="btn btn-default" id="ex5" value='Red Cliff'>Red Cliff</button>
-	                    <button type="button" class="btn btn-default" id="ex6" value='Jurassic World'>Jurassic World</button>
-	                    <button type="button" class="btn btn-default" id="ex7" value='World War Z'>World War Z</button>
-	                    <button type="button" class="btn btn-default" id="ex8" value='Get Hard'>Get Hard</button>
-	                    <button type="button" class="btn btn-default" id="ex9" value='Selma'>Selma</button>
-	                    <button type="button" class="btn btn-default" id="ex10" value='Mr. Holmes'>Mr. Holmes</button>
-	                    <button type="button" class="btn btn-default" id="ex11" value='Slow West'>Slow West</button>
-	                    <button type="button" class="btn btn-default" id="ex12" value='Pride'>Pride</button>
-	                    <button type="button" class="btn btn-default" id="ex13" value='It Follows'>It Follows</button>
-	                    <button type="button" class="btn btn-default" id="ex14" value='Love is Strange'>Love is Strange</button>
-	                    <button type="button" class="btn btn-default" id="ex15" value='The Pianist'>The Pianist</button>
-	                    <button type="button" class="btn btn-default" id="ex16" value='Love Actually'>Love Actually</button>
-	                    <button type="button" class="btn btn-default" id="ex17" value='The Fifth Element'>The Fifth Element</button>
-	                    <button type="button" class="btn btn-default" id="ex18" value='Taxi Driver'>Taxi Driver</button>
-	                    <button type="button" class="btn btn-default" id="ex19" value='The Blair Witch Project'>The Blair Witch Project</button>
-	                    <button type="button" class="btn btn-default" id="ex20" value='Taken 2'>Taken 2</button>
-	                    <button type="button" class="btn btn-default" id="ex21" value='Taken'>Taken</button>
+	                   <button type="button" class="btn btn-default" id="ex1" value='Black Swan'>Black Swan</button>
+	                   <button type="button" class="btn btn-default" id="ex2" value='Chinatown'>Chinatown</button>
+	                   <button type="button" class="btn btn-default" id="ex3" value='Limitless'>Limitless</button>
+	                   <button type="button" class="btn btn-default" id="ex4" value='The Room'>The Room</button>
+	                   <button type="button" class="btn btn-default" id="ex5" value='Sicario'>Sicario</button>
+	                   <button type="button" class="btn btn-default" id="ex6" value='Jurassic World'>Jurassic World</button>
+	                   <button type="button" class="btn btn-default" id="ex7" value='World War Z'>World War Z</button>
+	                   <button type="button" class="btn btn-default" id="ex8" value='Get Hard'>Get Hard</button>
+	                   <button type="button" class="btn btn-default" id="ex9" value='Selma'>Selma</button>
+	                   <button type="button" class="btn btn-default" id="ex10" value='Mr. Holmes'>Mr. Holmes</button>
+	                   <button type="button" class="btn btn-default" id="ex11" value='Slow West'>Slow West</button>
+	                   <button type="button" class="btn btn-default" id="ex12" value='Pride'>Pride</button>
+	                   <button type="button" class="btn btn-default" id="ex13" value='It Follows'>It Follows</button>
+	                   <button type="button" class="btn btn-default" id="ex14" value='Love is Strange'>Love is Strange</button>
+	                   <button type="button" class="btn btn-default" id="ex15" value='The Pianist'>The Pianist</button>
+	                   <button type="button" class="btn btn-default" id="ex16" value='Mad Max: Fury Road'>Mad Max: Fury Road</button>
+	                   <button type="button" class="btn btn-default" id="ex17" value='Star Wars: The Force Awakens'>Star Wars: The Force Awakens</button>
+	                   <button type="button" class="btn btn-default" id="ex19" value='The Hateful Eight'>The Hateful Eight</button>
+	        	   <button type="button" class="btn btn-default" id="ex20" value='The Revenant'>The Revenant</button>
 	                </div><!-- /.row -->
 
 	                <div class="row search-box">
